# learn_solana

./: .gitignore  README.md
paulx/: README.md
paulx/escrow/: Cargo.toml
paulx/escrow/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
projects/balance_tracker/: package-lock.json  package.json  tailwind.config.ts
projects/balance_tracker/src/components/: Address.tsx  Balance.tsx  BalanceCard.tsx  BalanceList.tsx  Button.tsx  HomePage.tsx  SearchForm.tsx  Title.tsx
projects/balance_tracker/src/pages/: index.tsx
projects/balance_tracker/src/pages/write_to/: index.js
projects/purpleid_xdapp/onchain/: README.md
projects/purpleid_xdapp/onchain/src/: instruction.rs  lib.rs
solana_course/generate-keypair/: .env  package.json
solana_course/generate-keypair/src/: connect.ts  generate_keypair.ts
solana_course/onchain-dev/src/movie_review/: instruction.rs  lib.rs  state.rs
solana_course/onchain-dev/src/note_maker/: instruction.rs  lib.rs
solana_course/soldev-course-ui/: package-lock.json
solana_course/soldev-course-ui/src/: airdrop_sol.ts  generate_keypair.ts  note_taking.ts  receiver.json  write_data.ts
